   path), RESPAWN_SCRIPT only spawns it if a previous instance exited, KILL_SCRIPT
  kills the script.
  Scripts are fed the ladderlog on stdin (and need to read it) and their stdout 
  output is interpreted as console input on the server. Environment variables 
  are set so the script knows all about the server configuration at time of launch.

Changes since 0.2.8.3.1:
- security fix: old style action commands from clients no loger cause hangs and crashes
- security fix: oversized packets are ignored properly
- security fix: never read one byte outside of the received buffer
- security fix: only include .cfg files from the var subfolder
- compiler compatibility: adapted to gcc 4.60
- smaller spelling fixes
- FOV calculations now correct for widescreen and horizontal splitscreen
- Additional checks against illegal values passed to renderer

Changes since 0.2.8.3:
- fixed temporary sound disappearance when alt-tabbing away and back
- default subcultures are now distributed
- enable 32 bit color depth at desktop resolution
- no more display lists for SiS cards
- spelling mistakes and missing German translations

Changes since 0.2.8.3_rc4:
==========================
- New setting: KEEP_PLAYER_SLOT allows the server to kick (preferably) spectators
   if it gets full so there is always one slot open for players
- New setting: ACCESS_LEVEL_AUTOKICK_IMMUNITY sets the access level required 
  to be immune from such kicks (and idle autokicks, too)
- Intercepted chat commands are now written to ladderlog.txt. Format:
  COMMAND /command-intercepted player [command arguments]
- Increased default speed of server pinging
- Reordered game menus a bit
- fast finish works again

Changes since 0.2.8.3_rc3:
==========================
- Pinging previously popular servers earlier for quicker server
  browsing
- Improved master server random polling, the second polled master now
  also is random, and all masters are polled if need be